Assigned Groups to Pairs in GroupList and created group Output CSV