@@ -10,6 +10,8 @@ import model.person.Participant;
 import model.event.Course;
 import model.event.io.InputData;
 
+import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 import java.util.Objects;
 
@@ -107,7 +109,7 @@ public class Pair implements ParticipantCollection {
     }
 
     public List<Group> getGroups() {
-        return List.of(groups);
+        return Arrays.asList(groups);
     }
 
     public void setKitchen(Kitchen kitchen) {
@@ -119,9 +121,9 @@ public class Pair implements ParticipantCollection {
     }
 
     public void setGroups(Group[] groups) {
-        for (ParticipantCollection group: groups)  {
+        for (Group group: groups)  {
             // TODO: may need to be changed once Group is implemented.
-            if (!group.contains(this)) {
+            if (!Arrays.asList(group.getPairs()).contains(this)) {
                 throw new RuntimeException("cannot assign a Group to this Pair if the group does not contain the Pair");
             }
         }
